Добавлена информация про настройку в readme.md. Уточнена маршрутизация.
